Fix sticky bottom is not applied with both sticky

The box which has a sticky position should be used instead of
scroll container block to check whether the box can be
positioned in constraningsize with sticky both sides offset.

BUG=703853
TEST=fast/css/sticky/sticky-both-sides*

Review-Url: https://codereview.chromium.org/2788053002
Cr-Commit-Position: refs/heads/master@{#462224}

Former-commit-id: b23829632c36f42e8cbcf6a3adf8fc11aaa4b337